# Udacity_CPP_CapstoneProject

./: CMakeLists.txt  Learnings.txt  README.md
shaders/: colorShading.frag  colorShading.ver
src/: main.cpp
src/game/: App.cpp  App.h  Errors.h  Erros.cpp  GLSLProgram.cpp  GLSLProgram.h  Sprite.cpp  Sprite.h  Vertex.h
